# fretraj

./: .buildinfo  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  __init__.py  accessible_volume.html  acvcloud.py  build.py  codecov.yml  contact_volume.html  data.json  docker-compose.yml  fret.py  fretraj.yml  genindex.html  index.html  intro.html  meta.yaml  module_cloud.html  module_fret.html  module_grid.html  module_utilities.html  objects.inv  parameter_file.html  py-modindex.html  pymol_plugin.html  pyproject.toml  references.html  requirements  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.binder/: environment.yml  requirements.txt
.github/workflows/: build.yml  coverage.yml  create_release.yml  docker.yml  docs.yml  pypi_upload.yml  release.yml  release_check.yml  release_check_conda.yml  release_check_pip.yml  test.yml
_modules/: index.html
_modules/fretraj/: burst.html  cloud.html  export.html  fret.html  grid.html  jupyter.html
_sources/: module_fret.rst.txt  module_grid.rst.txt  module_utilities.rst.txt  references.md  references.rst.txt
_sources/background/: accessible_volume.md  contact_volume.md  parameter_file.md
_sources/getting_started/: FRET_restraints.ipynb  acv_calculation.md  installation.md  jupyter-notebook.ipynb  jupyter-notebook.md  photon_bursts.ipynb  photon_bursts.md  trajectories.ipynb  trajectories.md
_sources/module/: burst.md  cloud.md  grid.md  utilities.md
_static/css/: custom.css
background/: accessible_volume.html  contact_volume.html  parameter_file.html
data/: 2m23.cif  labels.json
docs/: _config.yml  _toc.yml  index.html  intro.md  references.bib  references.md  requirements.txt
docs/background/: parameter_file.md
docs/getting_started/: FRET_restraints.md  acv_calculation.md  fret_prediction.md  higher-throughput.md  installation.md  jupyter-notebook.md  photon_bursts.md  reproducible-notebook.md  trajectories.md
docs/getting_started/burst_data/: burst_parameters.json
docs/getting_started/gmx/: mn_riboswitch_labels.json
docs/getting_started/gmx/out1/: MP.itp  vis.py  vis.vmd
docs/module/: fret.md  restraints.md
docs/source/: README.rst  accessible_volume.rst  conf.py  contact_volume.rst  fretraj.rst  index.rst  module_cloud.rst  module_grid.rst  module_restraints.rst  modules.rst  parameter_file.rst  pymol_plugin.rst  references.rst
docs/source/tutorial/: DNA_parameters.json  FRET_restraints.ipynb
docs/source/tutorial/restraints/: FRET_restraints.ipynb
docs/source/tutorial/single/: accessible_contact_volume.ipynb
docs/source/tutorial/trajectory/: DNA_every10ns.xtc  multiple_ACV.ipynb  parameters.json
fretraj/: __about__.py  __init__.py  cloud.py  export.py  fit.py  fret.py  fretraj.ui  fretraj_gui.py  grid.py  gui.py  isosurf.py  jupyter.py  periodic_table.json  restraints.py  settings.ui
fretraj/.github/workflows/: build.yml
fretraj/UI/: fretraj.ui  restraints.ui  settings.ui  textpad.ui
fretraj/data/: 2m23_labels.json
getting_started/: FRET_restraints.html  acv_calculation.html  fret_prediction.html  installation.html  jupyter-notebook.html  photon_bursts.html  trajectories.html
module/: burst.html  cloud.html  fret.html  grid.html  utilities.html
pymol/: Dockerfile  acv_pymol.py  fretraj_app.py
skripts/: console.py  pymol_vis.sh  vmd_vis.sh
src/fretraj/: .fretraj_settings.json  __init__.py  burst.py  cloud.py  console.py  export.py  fret.py  fretraj_gui.py  grid.py  isosurf.py  jupyter.py  relaxation.cpp  restraints.py
src/fretraj/UI/: fretraj.ui  restraints.ui
src/fretraj/examples/: 2m23_labels.json  DNA.xtc  DNA_hairpin.xtc  DNA_hairpin_labels.json  doublestranded_DNA_labels.json
src/fretraj/skripts/: pymol_vis.sh  vmd_vis.sh
tests/: cloud_test.py  test_cloud.py
tests/data/: test_acceptorcoords1.xvg  test_acceptorcoords2.xvg  test_donorcoords1.xvg  test_donorcoords2.xvg
tests/integration/: test_burst.py  test_cloud.py
tests/unit/: test_burst_load.py  test_export.py  test_label.py
