[project]
name = "fretraj"
version = "0.2.11"
description = "Predicting FRET with accessible-contact volumes"
authors = [
    { name = "Fabio Steffen", email = "fabio.steffen@chem.uzh.ch" }, 
    { name = "Roland K.O. Sigel", email = "roland.sigel@chem.uzh.ch" }, 
    { name = "Richard Börner", email = "richard.boerner@hs-mittweida.de" }
    ]
license = { text ="GPL-3.0-or-later" }
readme = "README.md"
keywords = ["FRET", "single-molecule", "molecular dynamics", "PDB", "structure prediction"]
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]


requires-python = ">=3.8"

dependencies = [
    "numpy",
    "numba",
    "pandas",
    "mdtraj",
    "tqdm",
    "jsonschema",
    "importlib-metadata"
]

[project.optional-dependencies]
dev = [
    "bumpver",
    "pytest",
    "build",
    "pytest-cov",
    "pytest-mock"
    ]
docs = [
    "jupyter-book",
    "ipywidgets",
    "matplotlib",
    "seaborn"
    ]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fretraj" = ["UI/*", "skripts/*", "examples/*", "periodic_table.json"]

[project.urls]
Repository = "https://github.com/RNA-FRETools/fretraj"
Documentation = "https://rna-fretools.github.io/fretraj/"
Issues = "https://rna-fretools.github.io/fretraj/issues"

[project.scripts]
fretraj = "fretraj.console:main"
fretraj_gui = "fretraj.fretraj_gui:main"
pymol_vis = "fretraj.console:pymol_vis"
vmd_vis = "fretraj.console:vmd_vis"

[build-system]
requires = ["setuptools", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.bumpver]
current_version = "0.2.11"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"$',
]

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = ["src/fretraj"]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--cov=fretraj"